--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,20 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@nghedgehog/calendar": [
+        "dist/nghedgehog/calendar"
+      ],
+      "@nghedgehog/calendar/*": [
+        "dist/nghedgehog/calendar/*"
+      ],
+      "@nghedgehog/ngx-calendar": [
+        "dist/nghedgehog/ngx-calendar"
+      ],
+      "@nghedgehog/ngx-calendar/*": [
+        "dist/nghedgehog/ngx-calendar/*"
+      ]
+    }
   }
 }
