--- a/package.json
+++ b/package.json
@@ -12,33 +12,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/animations": "^6.0.0",
+    "@angular/common": "^6.1.4",
+    "@angular/core": "^6.1.4",
+    "@angular/compiler": "^6.1.4",
+    "@angular/animations": "^6.1.4",
     "@angular/cdk": "^6.0.1",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
+    "@angular/forms": "^6.1.4",
+    "@angular/http": "^6.1.4",
+    "@angular/platform-browser": "^6.1.4",
+    "@angular/platform-browser-dynamic": "^6.1.4",
+    "@angular/router": "^6.1.4",
     "@types/hammerjs": "^2.0.35",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ngx-rx-modal": "0.0.1",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
     "@angular-devkit/build-angular": "^0.6.8",
-    "ng-packagr": "^3.0.0-rc.2",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.0",
-    "@angular/language-service": "^6.0.0",
+    "@angular-devkit/build-ng-packagr": "~0.6.8",
+    "@angular/cli": "~6.1.5",
+    "@angular/compiler-cli": "^6.1.4",
+    "@angular/language-service": "^6.1.4",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -50,8 +46,12 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^3.0.0-rc.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tsickle": "^0.32.1",
+    "tslib": "^1.7.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.9.2"
   }
 }
