--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/hammerjs": "^2.0.35",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-rx-modal": "0.0.11",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
