ng lib ngx-hm-calendar

--- a/angular.json
+++ b/angular.json
@@ -138,6 +138,41 @@
           }
         }
       }
+    },
+    "ngx-hm-calendar": {
+      "root": "projects/ngx-hm-calendar",
+      "sourceRoot": "projects/ngx-hm-calendar/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ngx-hm-calendar/tsconfig.lib.json",
+            "project": "projects/ngx-hm-calendar/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngx-hm-calendar/src/test.ts",
+            "tsConfig": "projects/ngx-hm-calendar/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-hm-calendar/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ngx-hm-calendar/tsconfig.lib.json",
+              "projects/ngx-hm-calendar/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "ngx-calendar"
