--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ngx-calendar": {
+    "ngx-calendar-demo": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -35,7 +35,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ngx-calendar",
+            "outputPath": "dist/ngx-calendar-demo",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -72,18 +72,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngx-calendar:build"
+            "browserTarget": "ngx-calendar-demo:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngx-calendar:build:production"
+              "browserTarget": "ngx-calendar-demo:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngx-calendar:build"
+            "browserTarget": "ngx-calendar-demo:build"
           }
         },
         "test": {
@@ -117,7 +117,7 @@
         }
       }
     },
-    "ngx-calendar-e2e": {
+    "ngx-calendar-demo-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -125,7 +125,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngx-calendar:serve"
+            "devServerTarget": "ngx-calendar-demo:serve"
           }
         },
         "lint": {
