--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve -o",
     "build": "ng build --prod --build-optimizer",
     "build:deploy": "ng build --prod --build-optimizer --base-href=https://shang-ting.github.io/ngx-hm-calendar/ && ngh -d dist/ngx-hm-calendar",
+    "build:lib": "ng run ngx-hm-calendar:build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
