--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build --prod --build-optimizer",
     "build:deploy": "ng build --prod --build-optimizer --base-href=https://shang-ting.github.io/ngx-hm-calendar/ && ngh -d dist/ngx-hm-calendar",
     "build:lib": "ng run ngx-hm-calendar:build",
+    "test-headless": "ng test --watch=false --browsers=ChromeHeadless",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
