--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
 node_js:
   - '9'
-sudo: required
 dist: trusty
 addons:
-    chrome: stable
+  apt:
+    packages:
+      - google-chrome-stable
 before_script:
     - "sudo chown root /opt/google/chrome/chrome-sandbox"
     - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
