update Travis CI configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ addons:
     packages:
       - google-chrome-stable
 before_script:
-    - "sudo chown root /opt/google/chrome/chrome-sandbox"
-    - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start &
+  - sleep 3
 branches:
   only:
     - master
