--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,25 @@
 language: node_js
 node_js:
-  - '9'
-sudo: required
-dist: trusty
+  - "10.4.1"
+sudo: true
+
 addons:
-  apt:
-    packages:
-      - google-chrome-stable
-before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start &
-  - sleep 3
+  chrome: stable
+
 branches:
   only:
     - master
+
 before_script:
   - npm install -g @angular/cli
+
+branches:
+  only:
+    - master
+
+before_script:
+  - npm install -g @angular/cli
+
 script:
   - ng lint
   - npm run test-headless
