--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
-    "build": "ng build --prod --build-optimizer",
-    "build:deploy": "ng build --prod --build-optimizer --base-href=https://shang-ting.github.io/ngx-hm-calendar/ && ngh -d dist/ngx-hm-calendar",
+    "build": "ng build ngx-calendar-demo --prod --build-optimizer",
+    "build:deploy": "ng build ngx-calendar-demo --prod --build-optimizer --base-href=https://shang-ting.github.io/ngx-hm-calendar/ && ngh -d dist/ngx-hm-calendar",
     "build:lib": "ng run ngx-hm-calendar:build",
     "test-headless": "ng test ngx-hm-calendar --watch=false --browsers=ChromeHeadless",
     "test": "ng test",
